# Agentic_Story_Book_Workflow

./: .env.example  .gitignore  DEMO-Results.md  LICENSE  README.ja-jp.md  README.md  README.zh-cn.md  app.py  generate.py  get_img_generation_test.py  pyproject.toml  requirements.txt
story_book_agents/: __init__.py  agent_manager.py  image_creator_agent.py  image_critic_agent.py  image_generation_agent.py  it_assistant_agent.py  producer_agent.py  receptionist_agent.py  story_critic_agent.py  story_draft_groupchat.py  story_editor_agent.py  storyboard_critic_agent.py  storyboard_editor_agent.py  storyboard_groupchat.py  text_to_image_prompt_critic_agent.py  text_to_image_prompt_editor_agent.py
story_book_agents/capabilities/: generate_images.py
story_book_agents/tools/: image.py  pptx.py  utils.py  video.py  voice.py
